--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
   </head>
 
   <body>
-    <div class="max-w-[1320px] md:py-[80] py-5 mx-auto">
-      <h1 class="text-4xl text-[#b20a2c] ">Code with Us</h1>
+    <div class="  max-w-[1320px] md:py-[80] py-5 mx-auto bg-[#023047] ">
+      <h1 class="text-4xl text-[#fff] font-bold ">Code_with_Us</h1>
     </div>
     <div class="max-w-[1320px] md:py-[80] py-5 mx-auto">
-      <h2 class="text-4xl text-center">Our services</h2>
+      <h2 class="text-4xl text-center my-4">Our services</h2>
     </div>
 
     <div
@@ -119,7 +119,7 @@
           class="fas fa-database text-3xl text-blue-900 group-hover:text-white duration-1000 animate-bounce"
         ></i>
         <h3 class="text-4xl py-2">Database</h3>
-        <p>Omly one place to store your data.</p>
+        <p>Only one place to store your data.</p>
       </div>
       <div
         class="group shadow-lg p-4 text-center hover:bg-blue-500 hover:text-white duration-1000"
@@ -166,7 +166,7 @@
     </div>
 
     <div
-      class="max-w-[1320px] mx-auto grid lg:grid-cols-4 md:grid-cols-2 gap-5 px-[20px] "
+      class="max-w-[1320px] mx-auto grid lg:grid-cols-4 md:grid-cols-2 gap-5 px-[20px] pb-20 "
     >
       <div class="text-center shadow-lg rounded">
         <div class="overflow-hidden">
@@ -219,5 +219,32 @@
       </div>
     </div>
     <!-- Featured products section ends here -->
+
+    <!-- footer  -->
+
+
+<footer class="fixed bottom-0 left-0 z-20 w-full p-4 bg-white border-t border-gray-200 shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-gray-800 dark:border-gray-600 ">
+  <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="https://flowbite.com/" class="hover:underline">Flowbite™</a>. All Rights Reserved.
+  </span>
+  <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
+      <li>
+          <a href="#" class="mr-4 hover:underline md:mr-6">About</a>
+      </li>
+      <li>
+          <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
+      </li>
+      <li>
+          <a href="#" class="mr-4 hover:underline md:mr-6">Licensing</a>
+      </li>
+      <li>
+          <a href="#" class="hover:underline">Contact</a>
+      </li>
+  </ul>
+</footer>
+
+
+
+   
+  </div>
   </body>
 </html>
