--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </head>
 
   <body >
-    <div class="  max-w-[1320px] md:py-[80] py-5 mx-auto bg-[#023047] ">
+    <div class="sticky top-0  max-w-[1320px] md:py-[80] py-3 mx-auto bg-[#023047] ">
       <h1 class="text-4xl text-[#fff] font-bold ">Code_with_Us</h1>
     </div>
     <div class="max-w-[1320px] md:py-[80] py-5 mx-auto">
@@ -223,7 +223,7 @@
     <!-- footer  -->
 
 
-<footer class="fixed bottom-0 left-0 z-20 w-full p-4 bg-white border-t border-gray-200 shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-gray-800 dark:border-gray-600 ">
+<footer class="sticky bottom-0 bottom-0 left-0  max-w-[1320px] md:py-[80] py-5 mx-auto bg-[#023047] md:flex md:items-center md:justify-between md:p-6 dark:bg-gray-800 dark:border-gray-600 ">
   <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="https://flowbite.com/" class="hover:underline">Flowbite™</a>. All Rights Reserved.
   </span>
   <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
